--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>City Skyline</title>
     <link href="styles.css" rel="stylesheet" />
+    <link href="script.js" rel="script" />
   </head>
 
   <body>
